--- a/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Create";
 }
+@*Diseño de barra herramientas en pestañas.*@
+
 <ul class="nav nav-tabs">
 
     <li role="presentation">
@@ -34,19 +36,30 @@
                 <span asp-validation-for="IdObjetivo" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Inicio" class="control-label"></label>
-                <input asp-for="Inicio" class="form-control" />
+
+                <div class="input-group">
+                    @Html.TextBoxFor(m => m.Inicio, "{0:dd/MM/yyyy}", new { maxlength = "12", @class = "date-picker form-control auto-focus" })
+                    <label for="@Html.IdFor(m => m.Inicio)" class="input-group-addon btn">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </label>
+
+                </div>
+
                 <span asp-validation-for="Inicio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Fin" class="control-label"></label>
-                <input asp-for="Fin" class="form-control" />
+                <div class="input-group">
+                    @Html.TextBoxFor(m => m.Fin, "{0:dd/MM/yyyy}", new { maxlength = "12", @class = "date-picker form-control auto-focus" })
+                    <label for="@Html.IdFor(m => m.Fin )" class="input-group-addon btn">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </label>
+
+                </div>
+
                 <span asp-validation-for="Fin" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -57,6 +70,16 @@
 
 
             </div>
+            <div class="form-group">
+                <label asp-for="Descripcion" class="control-label"></label>
+
+
+                @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", @placeholder = "Ingrese sus objetivos." })
+
+                <span asp-validation-for="Descripcion" class="text-danger"></span>
+
+            </div>
+
             <nav class="navbar navbar-light bg-light">
                 <input type="submit" value="Create" class="btn btn-success " />
                 <a asp-action="Index" asp-route-TipoObjId="@ViewBag.TipoObjId" class="btn btn-default">cancelar</a>
@@ -69,6 +92,22 @@
 
 </div>
 
+<link href="~/jquery-ui-1.12.1.custom/jquery-ui.css" rel="stylesheet" />
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script>
+
+        $(function () {
+            $(".date-picker").datepicker({
+                dateFormat: "dd/mm/yy",
+                changeMonth: true,
+                changeYear: true
+
+            });
+        });
+
+    </script>
+
 }
