--- a/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
@@ -56,7 +56,7 @@
         <nav class="navbar navbar-light bg-light">
 
             <input type="hidden" asp-for="IdObjetivo" />
-            <input type="submit" value="Confirmar" class="btn btn-default" /> |
+            <input type="submit" value="Confirmar" class="btn  btn-danger  " /> 
             <a asp-action="Index" asp-route-TipoObjId="@ViewBag.TipoObjId" class="btn btn-default">cancelar</a>
         </nav>
 
