--- a/ASPNETCORERoleManagement/Views/TipoObjs/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Index.cshtml
@@ -5,10 +5,39 @@
 }
 
 <h2>Tipo de objetivos|Grupo de Compañia:@ViewBag.GpoCiaG</h2>
+<div class="panel panel-default">
+    <div class="panel-heading">Criterios de búsqueda</div>
+    <div class="panel-body">
+        @using (Html.BeginForm(null, null, FormMethod.Get))
+        {
+        <fieldset class="form-group  form-horizontal  ">
+            <div class="col-xs-3">
+                @Html.Label("Sociedad", "Sociedad:")
 
+                @Html.TextBox("SociedadPar", null, new { @class = "form-control input-sm " })
+            </div>
+            <div class="col-xs-6">
+                @Html.Label("Descripcion", "Descripción:")
+                @Html.TextBox("DescripcionPar", null, new { @class = "form-control input-sm" })
+            </div>
+
+            
+            
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            
+
+            
+
+        </fieldset>
+        }
+
+    </div>
+</div>
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a asp-action="Create" class="btn btn-success ">Nuevo</a>
 </p>
+
+
 <table class="table">
     <thead>
         <tr>
